--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "jest": "^27.5.1",
     "pkg": "^5.5.2",
     "standard-version": "^9.3.2"
+  },
+  "overrides": {
+    "jszip": "^3.9.0"
   }
 }
